--- a/Homework/Practice/Users_CR/templates/create_user.html
+++ b/Homework/Practice/Users_CR/templates/create_user.html
@@ -9,7 +9,14 @@
 </head>
 <body class="d-flex justify-content-center">
     <div class="d-flex justify-content-center form-group row d-grid gap-3 m-5 p-4" style= "width:700px;">
-        <h1 class="text-center"> Add a New User</h1>
+        <div class="d-flex justify-content-between "> 
+            <div>
+            <h1> Add a New User</h1>
+            </div>
+            <div>
+                <a href="/users">Home</a>
+            </div>
+        </div>
         <form action="/users/create" method="post">
             <div class="mb-3">
                 <label for="first_name" class="form-label">First Name:</label>
