--- a/Homework/Practice/Users_CR/templates/edit_user.html
+++ b/Homework/Practice/Users_CR/templates/edit_user.html
@@ -4,26 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create User</title>
+    <title>Edit User</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 <body class="d-flex justify-content-center">
     <div class="d-flex justify-content-center form-group row d-grid gap-3 m-5 p-4" style= "width:700px;">
-        <h1 class="text-center"> Add a New User</h1>
-        <form action="/users/create" method="post">
+        <div class="d-flex justify-content-between "> 
+            <div>
+            <h1> Edit User {{one_user.id}} </h1>
+            </div>
+            <div>
+                <a href="/users">Home</a>
+            </div>
+        </div>        <form action="/users/{{one_user.id}}/update" method="post">
             <div class="mb-3">
                 <label for="first_name" class="form-label">First Name:</label>
-                <input type="name" class="form-control" name="first_name">
+                <input type="name" class="form-control" name="first_name" value="{{one_user.first_name}}">
             </div>
             <div class="mb-3">
                 <label for="last_name" class="form-label">Last Name:</label>
-                <input type="name" class="form-control" name="last_name">
+                <input type="name" class="form-control" name="last_name" value="{{one_user.last_name}}">
             </div>
             <div class="mb-3">
                 <label for="email" class="form-label">Email:</label>
-                <input type="email" class="form-control" name="email">
+                <input type="email" class="form-control" name="email"value="{{one_user.email}}">
             </div>
-            <input type="submit" class="btn bg-success text-white" value="Add User">
+            <div class="d-flex justify-content-between ">
+                <input type="submit" class="btn bg-success text-white" value="Edit User">
+                <a href="/users/{{one_user.id}}" class="d-flex align-items-center">Show User </a>
+        </div>
         </form>
     </div>
 </body>
