--- a/Homework/Practice/Users_CR/templates/users.html
+++ b/Homework/Practice/Users_CR/templates/users.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
 </head>
-<body>
+<body class="m-5">
     <h1 class="text-center">All Users</h1>
    <table class="table">
     <thead>
@@ -17,6 +17,8 @@
             <th scope="col">Full Name</th>
             <th scope="col">Email</th>
             <th scope="col">Created At</th>
+            <th scope="col">Actions</th>
+
         </tr>
     </thead>
     <tbody>
@@ -26,6 +28,13 @@
             <td>{{one_user.first_name}} {{one_user.last_name}}</td>
             <td>{{one_user.email}}</td>
             <td>{{one_user.created_at}}</td>
+            <td>
+                <a href="/users/{{one_user.id}}">Show | </a>
+                <a href="/users/{{one_user.id}}/edit"> Edit |</a>
+                <a href="/users/{{one_user.id}}/delete">Delete</a>
+
+            </td>
+
         </tr>
         {% endfor%}
     </tbody>
