--- a/Party_demo/flask_app/templates/my_parties.html
+++ b/Party_demo/flask_app/templates/my_parties.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>My parties</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
 </head>
@@ -14,30 +14,29 @@
             {% for message in get_flashed_messages()%}
             <p class="text-danger">{{message}}</p>
             {% endfor %}
-            <h1>Welcome {{logged_user.first_name}}!!</h1>
+            <h1>{{logged_user.first_name}}'s' Parties</h1>
             <div>
-                <a href="/my_parties" class="btn btn-primary">My Parties</a>
-                <a href="/users/logout" class="btn btn-danger">Log Out</a>
+                <a href="/welcome" class="btn btn-primary">Home</a>
             </div>
         </div>
-        <h3>All the cool parties we know about</h3>
         <table class="table table-striped">
             <thead>
-                <tr>What</tr>
-                <tr>Location</tr>
-                <tr>Date</tr>
-                <tr>All Ages</tr>
-                <tr>Posted By</tr>
-                <tr>Actions</tr>
+                <tr>
+                    <th>What</th>
+                    <th>Location</th>
+                    <th>Date</th>
+                    <th>All Ages</th>
+                    <th>Actions</th>
+                </tr>
             </thead>
             <tbody>
-                {% for party in all_parties%}
+                {% for party in logged_user.parties%}
                 <tr>
                     <td>{{party.what}}</td>
                     <td>{{party.location}}</td>
                     <td>{{party.date}}</td>
                     <td>{% if party.all_ages == 1%}True{%else%}False{%endif%}</td>
-                    <td>{{party.planner.first_name}} {{party.planner.last_name}}</td>
+                    
                     <td>
                         <a href="/parties/{{party.id}}">View</a>
                         {% if session['user_id'] == party.user_id %}
